<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.example.bobby_000.dcu_orientation.GameOverActivity"
                tools:showIn="@layout/activity_game_over">




        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">



            <Button
                android:id="@+id/saveScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:onClick="Savescore"
                android:text="Save score"/>

            <EditText
                android:id="@+id/namevalue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"

                android:hint="Insert your name"/>


        </LinearLayout>
    <LinearLayout
        android:id="@+id/scorevalues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textviewpoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1.85"
            android:text="Points"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20dp"/>



    </LinearLayout>


</RelativeLayout>
