<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dcu">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#C1ffffff"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="181dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:layout_weight=".20"
            android:background="@drawable/dcu_logo_orientation"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/mybutton"
                android:onClick="gamemenu"

                android:text="Games"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/mybutton"
                android:onClick="week1"
                android:text="Week 1"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/mybutton"
                android:onClick="week2"
                android:text="Week 2"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/mybutton"
                android:onClick="week3"
                android:text="Week 3"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:background="@drawable/mybutton"
                android:onClick="week4"
                android:text="Week 4"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/mybutton"
                android:onClick="week5"

                android:text="Week 5"
                android:textColor="#ffffff"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
