<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bobby_000.dcu_orientation.ScoreActivity"
    tools:showIn="@layout/activity_score2">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewScores"
            />


    </ScrollView>

</RelativeLayout>
