<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dcu">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="#C1ffffff"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="181dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="0.34"
            android:background="@drawable/dcu_logo_orientation"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:onClick="semester1Button"
                android:text="Semester 1"
                android:textColor="#ffffff"

                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
